<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/bgServiceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/background_service_title"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/foregroundServiceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foreground_service_title"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/jobSchedulerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_scheduler_title"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/boundServiceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bound_service_title" />

</LinearLayout>