<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/foreground_service_hint"/>

    <Button
        android:id="@+id/startServiceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foreground_service_start"/>

    <Button
        android:id="@+id/stopServiceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foreground_service_cancel"/>
</LinearLayout>